--- a/index.html
+++ b/index.html
@@ -19,103 +19,108 @@
         <link rel="stylesheet" href="css/screen.css">
     </head>
     <body>
+        
         <form action="#">
-            <h1>
-                Cursusevaluatie
-            </h1>
-            <p>
-                Graag ontvangen we je mening over de cursus die je zojuist hebt voltooid, inclusief feedback over de cursusstructuur, de
-                content en de docent.
-            </p>
-            <p>
-                Vond je het een leuke module tot nu toe?
-            </p>
-            <ul>
-                <li>
-                    <input type="radio" name="radios" id="radio1" required>
+            <div class="c-header-balk"></div>
+            <div class="c-form">
+                <h1>
+                    Cursusevaluatie
+                </h1>
+                <p>
+                    Graag ontvangen we je mening over de cursus die je zojuist hebt voltooid, inclusief feedback over de cursusstructuur, de
+                    content en de docent.
+                </p>
+                <p>
+                    Vond je het een leuke module tot nu toe?
+                </p>
+                <ul>
+                    <li>
+                        <input type="radio" name="radios" id="radio1" required>
+                        <label>
+                            Ja
+                        </label>
+                    </li>
+                    <li>
+                        <input type="radio" name="radios" id="radio2" required>
+                        <label>
+                            Zeker
+                        </label>
+                    </li>
+                    <li>
+                        <input type="radio" name="radios" id="radio3" required>
+                        <label>
+                            Absoluut
+                        </label>
+                    </li>
+                </ul>
+                <p>
+                    Waar ging de module over?
+                </p>
+                <ul>
+                    <li>
+                        <input type="checkbox" checked>
+                        <label>
+                            CSS
+                        </label>
+                    </li>
+                    <li>
+                        <input type="checkbox">
+                        <label>
+                            Javascript
+                        </label>
+                    </li>
+                    <li>
+                        <input type="checkbox">
+                        <label>
+                            Python
+                        </label>
+                    </li>
+                    <li>
+                        <input type="checkbox">
+                        <label>
+                            Flask
+                        </label>
+                    </li>
+                    <li>
+                        <input type="checkbox">
+                        <label>
+                            MySQL
+                        </label>
+                    </li>
+                    <li>
+                        <input type="checkbox">
+                        <label>
+                            Jinja
+                        </label>
+                    </li>
+                    <li>
+                        <input type="checkbox">
+                        <label>
+                            Android
+                        </label>
+                    </li>
+                    <li>
+                        <input type="checkbox">
+                        <label>
+                            C-Sharp
+                        </label>
+                    </li>
+                </ul>
+                <p>
                     <label>
-                        Ja
+                        Wat zou je veranderen?
                     </label>
-                </li>
-                <li>
-                    <input type="radio" name="radios" id="radio2" required>
-                    <label>
-                        Zeker
-                    </label>
-                </li>
-                <li>
-                    <input type="radio" name="radios" id="radio3" required>
-                    <label>
-                        Absoluut
-                    </label>
-                </li>
-            </ul>
-            <p>
-                Waar ging de module over?
-            </p>
-            <ul>
-                <li>
-                    <input type="checkbox" checked>
-                    <label>
-                        CSS
-                    </label>
-                </li>
-                <li>
-                    <input type="checkbox">
-                    <label>
-                        Javascript
-                    </label>
-                </li>
-                <li>
-                    <input type="checkbox">
-                    <label>
-                        Python
-                    </label>
-                </li>
-                <li>
-                    <input type="checkbox">
-                    <label>
-                        Flask
-                    </label>
-                </li>
-                <li>
-                    <input type="checkbox">
-                    <label>
-                        MySQL
-                    </label>
-                </li>
-                <li>
-                    <input type="checkbox">
-                    <label>
-                        Jinja
-                    </label>
-                </li>
-                <li>
-                    <input type="checkbox">
-                    <label>
-                        Android
-                    </label>
-                </li>
-                <li>
-                    <input type="checkbox">
-                    <label>
-                        C-Sharp
-                    </label>
-                </li>
-            </ul>
-            <p>
-                <label>
-                    Wat zou je veranderen?
-                </label>
-                <textarea name="changes" id="changes"></textarea>
-            </p>            
-            <p>
-                <button type="button">Vorige</button>
-                <button type="submit">Volgende</button>
-            </p>
-            <p>
-                Stap 2 van 3
-            </p>
+                    <textarea name="changes" id="changes"></textarea>
+                </p>            
+                <p>
+                    <button type="button">Vorige</button>
+                    <button type="submit">Volgende</button>
+                </p>
+                <p>
+                    Stap 2 van 3
+                </p>
+            </div>
+            
         </form>
     </body>
 </html>
