--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
     </head>
     <body>
         
-        <form action="#">
+        <form class="o-container-box" action="#">
             <div class="c-header-balk"></div>
             <div class="c-form">
-                <h1>
+                <h1  class="c-textcolor-dark">
                     Cursusevaluatie
                 </h1>
-                <p>
+                <p  class="c-textcolor-light">
                     Graag ontvangen we je mening over de cursus die je zojuist hebt voltooid, inclusief feedback over de cursusstructuur, de
                     content en de docent.
                 </p>
-                <p>
+                <p class="c-textcolor-dark">
                     Vond je het een leuke module tot nu toe?
                 </p>
                 <ul>
@@ -53,7 +53,7 @@
                         </label>
                     </li>
                 </ul>
-                <p>
+                <p  class="c-textcolor-dark">
                     Waar ging de module over?
                 </p>
                 <ul>
@@ -107,7 +107,7 @@
                     </li>
                 </ul>
                 <p>
-                    <label>
+                    <label class="c-textcolor-dark">
                         Wat zou je veranderen?
                     </label>
                     <textarea name="changes" id="changes"></textarea>
