--- a/index.html
+++ b/index.html
@@ -33,26 +33,38 @@
                 <p class="c-textcolor-dark">
                     Vond je het een leuke module tot nu toe?
                 </p>
-                <ul>
-                    <li>
-                        <input type="radio" name="radios" id="radio1" required>
-                        <label>
+
+                <ul class="o-list c-option-list">
+                    <li class="c-form-field c-form-field--option c-option-list__item">
+                        <input class="o-hide-accessible c-option c-option--hidden" type="radio" name="radios" id="radio1">
+                        <label class="c-label c-label--option c-custom-option" for="radio1">
+                            <span class="c-custom-option__fake-input c-custom-option__fake-input--radio">
+                                <span class="c-custom-option__symbol"></span>
+                            </span>
                             Ja
                         </label>
                     </li>
-                    <li>
-                        <input type="radio" name="radios" id="radio2" required>
-                        <label>
-                            Zeker
+                    <li class="c-form-field c-form-field--option c-option-list__item">
+                        <input class="o-hide-accessible c-option c-option--hidden" type="radio" name="radios" id="radio2">
+                        <label class="c-label c-label--option c-custom-option" for="radio2">
+                            <span class="c-custom-option__fake-input c-custom-option__fake-input--radio">
+                                <span class="c-custom-option__symbol"></span>
+                            </span>
+                            zeker
                         </label>
                     </li>
-                    <li>
-                        <input type="radio" name="radios" id="radio3" required>
-                        <label>
-                            Absoluut
+                    <li class="c-form-field c-form-field--option c-option-list__item">
+                        <input class="o-hide-accessible c-option c-option--hidden" type="radio" name="radios" id="radio3">
+                        <label class="c-label c-label--option c-custom-option" for="radio3">
+                            <span class="c-custom-option__fake-input c-custom-option__fake-input--radio">
+                                <span class="c-custom-option__symbol"></span>
+                            </span>
+                            absoluut
                         </label>
                     </li>
                 </ul>
+
+
                 <p  class="c-textcolor-dark">
                     Waar ging de module over?
                 </p>
