--- a/index.html
+++ b/index.html
@@ -68,53 +68,104 @@
                 <p  class="c-textcolor-dark">
                     Waar ging de module over?
                 </p>
-                <ul>
-                    <li>
-                        <input type="checkbox" checked>
-                        <label>
+                <ul class="o-list c-option-list c-board">
+                    <li class="c-form-field c-form-field--option c-option-list__item c-item-1">
+                        <input class="o-hide-accessible c-option c-option--hidden" type="checkbox" id="checkbox1" checked>
+                        <label class="c-label c-label--option c-custom-option" for="checkbox1">
+                            <span class="c-custom-option__fake-input c-custom-option__fake-input--checkbox">
+                                <svg class="c-custom-option__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9 6.75">
+                                    <path d="M4.75,9.5a1,1,0,0,1-.707-.293l-2.25-2.25A1,1,0,1,1,3.207,5.543L4.75,7.086,8.793,3.043a1,1,0,0,1,1.414,1.414l-4.75,4.75A1,1,0,0,1,4.75,9.5" transform="translate(-1.5 -2.75)"/>
+                                </svg>
+                            </span>
                             CSS
                         </label>
                     </li>
-                    <li>
-                        <input type="checkbox">
-                        <label>
+                    <li class="c-form-field c-form-field--option c-option-list__item c-item-2">
+                        <input class="o-hide-accessible c-option c-option--hidden" type="checkbox" id="checkbox2">
+                        <label class="c-label c-label--option c-custom-option" for="checkbox2">
+                            <span class="c-custom-option__fake-input c-custom-option__fake-input--checkbox">
+                                <svg class="c-custom-option__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9 6.75">
+                                    <path d="M4.75,9.5a1,1,0,0,1-.707-.293l-2.25-2.25A1,1,0,1,1,3.207,5.543L4.75,7.086,8.793,3.043a1,1,0,0,1,1.414,1.414l-4.75,4.75A1,1,0,0,1,4.75,9.5" transform="translate(-1.5 -2.75)"/>
+                                </svg>
+                            </span>
+                            HTML
+                        </label>
+                    </li>
+                    <li class="c-form-field c-form-field--option c-option-list__item c-item-3">
+                        <input class="o-hide-accessible c-option c-option--hidden" type="checkbox" id="checkbox3">
+                        <label class="c-label c-label--option c-custom-option" for="checkbox3">
+                            <span class="c-custom-option__fake-input c-custom-option__fake-input--checkbox">
+                                <svg class="c-custom-option__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9 6.75">
+                                    <path d="M4.75,9.5a1,1,0,0,1-.707-.293l-2.25-2.25A1,1,0,1,1,3.207,5.543L4.75,7.086,8.793,3.043a1,1,0,0,1,1.414,1.414l-4.75,4.75A1,1,0,0,1,4.75,9.5" transform="translate(-1.5 -2.75)"/>
+                                </svg>
+                            </span>
                             Javascript
                         </label>
                     </li>
-                    <li>
-                        <input type="checkbox">
-                        <label>
+                    <li class="c-form-field c-form-field--option c-option-list__item c-item-4">
+                        <input class="o-hide-accessible c-option c-option--hidden" type="checkbox" id="checkbox4" checked>
+                        <label class="c-label c-label--option c-custom-option" for="checkbox4">
+                            <span class="c-custom-option__fake-input c-custom-option__fake-input--checkbox">
+                                <svg class="c-custom-option__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9 6.75">
+                                    <path d="M4.75,9.5a1,1,0,0,1-.707-.293l-2.25-2.25A1,1,0,1,1,3.207,5.543L4.75,7.086,8.793,3.043a1,1,0,0,1,1.414,1.414l-4.75,4.75A1,1,0,0,1,4.75,9.5" transform="translate(-1.5 -2.75)"/>
+                                </svg>
+                            </span>
                             Python
                         </label>
                     </li>
-                    <li>
-                        <input type="checkbox">
-                        <label>
+                    <li class="c-form-field c-form-field--option c-option-list__item c-item-5">
+                        <input class="o-hide-accessible c-option c-option--hidden" type="checkbox" id="checkbox5" checked>
+                        <label class="c-label c-label--option c-custom-option" for="checkbox5">
+                            <span class="c-custom-option__fake-input c-custom-option__fake-input--checkbox">
+                                <svg class="c-custom-option__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9 6.75">
+                                    <path d="M4.75,9.5a1,1,0,0,1-.707-.293l-2.25-2.25A1,1,0,1,1,3.207,5.543L4.75,7.086,8.793,3.043a1,1,0,0,1,1.414,1.414l-4.75,4.75A1,1,0,0,1,4.75,9.5" transform="translate(-1.5 -2.75)"/>
+                                </svg>
+                            </span>
                             Flask
                         </label>
                     </li>
-                    <li>
-                        <input type="checkbox">
-                        <label>
+                    <li class="c-form-field c-form-field--option c-option-list__item c-item-6">
+                        <input class="o-hide-accessible c-option c-option--hidden" type="checkbox" id="checkbox6" checked>
+                        <label class="c-label c-label--option c-custom-option" for="checkbox6">
+                            <span class="c-custom-option__fake-input c-custom-option__fake-input--checkbox">
+                                <svg class="c-custom-option__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9 6.75">
+                                    <path d="M4.75,9.5a1,1,0,0,1-.707-.293l-2.25-2.25A1,1,0,1,1,3.207,5.543L4.75,7.086,8.793,3.043a1,1,0,0,1,1.414,1.414l-4.75,4.75A1,1,0,0,1,4.75,9.5" transform="translate(-1.5 -2.75)"/>
+                                </svg>
+                            </span>
                             MySQL
                         </label>
                     </li>
-                    <li>
-                        <input type="checkbox">
-                        <label>
+                    <li class="c-form-field c-form-field--option c-option-list__item c-item-7">
+                        <input class="o-hide-accessible c-option c-option--hidden" type="checkbox" id="checkbox7" checked>
+                        <label class="c-label c-label--option c-custom-option" for="checkbox7">
+                            <span class="c-custom-option__fake-input c-custom-option__fake-input--checkbox">
+                                <svg class="c-custom-option__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9 6.75">
+                                    <path d="M4.75,9.5a1,1,0,0,1-.707-.293l-2.25-2.25A1,1,0,1,1,3.207,5.543L4.75,7.086,8.793,3.043a1,1,0,0,1,1.414,1.414l-4.75,4.75A1,1,0,0,1,4.75,9.5" transform="translate(-1.5 -2.75)"/>
+                                </svg>
+                            </span>
                             Jinja
                         </label>
                     </li>
-                    <li>
-                        <input type="checkbox">
-                        <label>
+                    <li class="c-form-field c-form-field--option c-option-list__item c-item-8">
+                        <input class="o-hide-accessible c-option c-option--hidden" type="checkbox" id="checkbox8" checked>
+                        <label class="c-label c-label--option c-custom-option" for="checkbox8">
+                            <span class="c-custom-option__fake-input c-custom-option__fake-input--checkbox">
+                                <svg class="c-custom-option__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9 6.75">
+                                    <path d="M4.75,9.5a1,1,0,0,1-.707-.293l-2.25-2.25A1,1,0,1,1,3.207,5.543L4.75,7.086,8.793,3.043a1,1,0,0,1,1.414,1.414l-4.75,4.75A1,1,0,0,1,4.75,9.5" transform="translate(-1.5 -2.75)"/>
+                                </svg>
+                            </span>
                             Android
                         </label>
                     </li>
-                    <li>
-                        <input type="checkbox">
-                        <label>
-                            C-Sharp
+                    <li class="c-form-field c-form-field--option c-option-list__item c-item-9">
+                        <input class="o-hide-accessible c-option c-option--hidden" type="checkbox" id="checkbox9" checked>
+                        <label class="c-label c-label--option c-custom-option" for="checkbox9">
+                            <span class="c-custom-option__fake-input c-custom-option__fake-input--checkbox">
+                                <svg class="c-custom-option__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9 6.75">
+                                    <path d="M4.75,9.5a1,1,0,0,1-.707-.293l-2.25-2.25A1,1,0,1,1,3.207,5.543L4.75,7.086,8.793,3.043a1,1,0,0,1,1.414,1.414l-4.75,4.75A1,1,0,0,1,4.75,9.5" transform="translate(-1.5 -2.75)"/>
+                                </svg>
+                            </span>
+                            CSharp
                         </label>
                     </li>
                 </ul>
@@ -122,7 +173,7 @@
                     <label class="c-textcolor-dark">
                         Wat zou je veranderen?
                     </label>
-                    <textarea name="changes" id="changes"></textarea>
+                    <textarea class="c-textarea" name="changes" id="changes"></textarea>
                 </p>            
                 <p>
                     <button type="button">Vorige</button>
