--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
                     <textarea class="c-textarea" name="changes" id="changes"></textarea>
                 </p>            
                 <p>
-                    <button type="button">Vorige</button>
-                    <button type="submit">Volgende</button>
+                    <button class="c-button-terug" type="button">Vorige</button>
+                    <button class="c-button-volgende" type="submit">Volgende</button>
                 </p>
                 <p>
                     Stap 2 van 3
