--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <textarea class="c-textarea" name="changes" id="changes"></textarea>
                 </p>            
                 <p>
-                    <button class="c-button-terug" type="button">Vorige</button>
+                    <button class="c-button-terug-arrow< c-button-terug" type="button"> a</button>
                     <button class="c-button-volgende" type="submit">Volgende</button>
                 </p>
                 <p>
