--- a/index.html
+++ b/index.html
@@ -176,14 +176,17 @@
                     <textarea class="c-textarea" name="changes" id="changes"></textarea>
                 </p>            
                 <p>
-                    <button class="c-button-terug-arrow< c-button-terug" type="button"> a</button>
+                    <button class="c-button-terug-arrow< c-button-terug" type="button">terug</button>
                     <button class="c-button-volgende" type="submit">Volgende</button>
                 </p>
-                <p>
+                <div class="progress-bar">
+                    <span class="progress-bar-fill" style="width: 70%;"></span>
+                </div>
+                <p class="c-text">
                     Stap 2 van 3
                 </p>
+                
             </div>
-            
         </form>
     </body>
 </html>
