--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <label class="c-textcolor-dark">
                         Wat zou je veranderen?
                     </label>
-                    <textarea class="c-textarea" name="changes" id="changes"></textarea>
+                    <textarea placeholder="Ik zou het niet direct weten" class="c-textarea" name="changes" id="changes"></textarea>
                 </p>            
                 <p>
                     <button class="c-button-terug-arrow< c-button-terug" type="button">terug</button>
