--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     Waar ging de module over?
                 </p>
                 <ul class="o-list c-option-list c-board">
-                    <li class="c-form-field c-form-field--option c-option-list__item c-item-1">
+                    <li class="c-form-field c-form-field--option c-option-list__item">
                         <input class="o-hide-accessible c-option c-option--hidden" type="checkbox" id="checkbox1" checked>
                         <label class="c-label c-label--option c-custom-option" for="checkbox1">
                             <span class="c-custom-option__fake-input c-custom-option__fake-input--checkbox">
@@ -80,7 +80,7 @@
                             CSS
                         </label>
                     </li>
-                    <li class="c-form-field c-form-field--option c-option-list__item c-item-2">
+                    <li class="c-form-field c-form-field--option c-option-list__item">
                         <input class="o-hide-accessible c-option c-option--hidden" type="checkbox" id="checkbox2">
                         <label class="c-label c-label--option c-custom-option" for="checkbox2">
                             <span class="c-custom-option__fake-input c-custom-option__fake-input--checkbox">
@@ -91,7 +91,7 @@
                             HTML
                         </label>
                     </li>
-                    <li class="c-form-field c-form-field--option c-option-list__item c-item-3">
+                    <li class="c-form-field c-form-field--option c-option-list__item">
                         <input class="o-hide-accessible c-option c-option--hidden" type="checkbox" id="checkbox3">
                         <label class="c-label c-label--option c-custom-option" for="checkbox3">
                             <span class="c-custom-option__fake-input c-custom-option__fake-input--checkbox">
@@ -102,7 +102,7 @@
                             Javascript
                         </label>
                     </li>
-                    <li class="c-form-field c-form-field--option c-option-list__item c-item-4">
+                    <li class="c-form-field c-form-field--option c-option-list__item">
                         <input class="o-hide-accessible c-option c-option--hidden" type="checkbox" id="checkbox4" checked>
                         <label class="c-label c-label--option c-custom-option" for="checkbox4">
                             <span class="c-custom-option__fake-input c-custom-option__fake-input--checkbox">
@@ -113,7 +113,7 @@
                             Python
                         </label>
                     </li>
-                    <li class="c-form-field c-form-field--option c-option-list__item c-item-5">
+                    <li class="c-form-field c-form-field--option c-option-list__item">
                         <input class="o-hide-accessible c-option c-option--hidden" type="checkbox" id="checkbox5" checked>
                         <label class="c-label c-label--option c-custom-option" for="checkbox5">
                             <span class="c-custom-option__fake-input c-custom-option__fake-input--checkbox">
@@ -124,7 +124,7 @@
                             Flask
                         </label>
                     </li>
-                    <li class="c-form-field c-form-field--option c-option-list__item c-item-6">
+                    <li class="c-form-field c-form-field--option c-option-list__item">
                         <input class="o-hide-accessible c-option c-option--hidden" type="checkbox" id="checkbox6" checked>
                         <label class="c-label c-label--option c-custom-option" for="checkbox6">
                             <span class="c-custom-option__fake-input c-custom-option__fake-input--checkbox">
@@ -135,7 +135,7 @@
                             MySQL
                         </label>
                     </li>
-                    <li class="c-form-field c-form-field--option c-option-list__item c-item-7">
+                    <li class="c-form-field c-form-field--option c-option-list__item">
                         <input class="o-hide-accessible c-option c-option--hidden" type="checkbox" id="checkbox7" checked>
                         <label class="c-label c-label--option c-custom-option" for="checkbox7">
                             <span class="c-custom-option__fake-input c-custom-option__fake-input--checkbox">
@@ -146,7 +146,7 @@
                             Jinja
                         </label>
                     </li>
-                    <li class="c-form-field c-form-field--option c-option-list__item c-item-8">
+                    <li class="c-form-field c-form-field--option c-option-list__item">
                         <input class="o-hide-accessible c-option c-option--hidden" type="checkbox" id="checkbox8" checked>
                         <label class="c-label c-label--option c-custom-option" for="checkbox8">
                             <span class="c-custom-option__fake-input c-custom-option__fake-input--checkbox">
@@ -157,7 +157,7 @@
                             Android
                         </label>
                     </li>
-                    <li class="c-form-field c-form-field--option c-option-list__item c-item-9">
+                    <li class="c-form-field c-form-field--option c-option-list__item">
                         <input class="o-hide-accessible c-option c-option--hidden" type="checkbox" id="checkbox9" checked>
                         <label class="c-label c-label--option c-custom-option" for="checkbox9">
                             <span class="c-custom-option__fake-input c-custom-option__fake-input--checkbox">
